# d2coding

./: LICENSE  build.sh  index.html  pyproject.toml  requirements.txt
css/: D2Coding-ligature.css  D2Coding.css
fonts/subset/: glyphs.txt  unicodes.txt
