[tool.poetry]
name = "d2coding"
version = "0.1.0"
description = ""
authors = ["Dong-Young Kim <31337.persona@gmail.com>"]
license = "OFL-1.1"

[tool.poetry.dependencies]
python = "^3.7"
fonttools = "^4.14.0"
zopfli = "^0.1.7"
brotli = "^1.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
